# predict_genre

./: .gitignore  README.md  install.sh  pyproject.toml  readme.md
src/predict_genre/: extractor.py  features.csv  idk  main.py  model.pkl  trainer.py
src/predict_genre.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
