[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "predict_genre"
version = "0.2.0"
#dynamic = ["version"]
description = "predict the genre of music"
readme = "readme.md"
requires-python = ">=3.11.0"
#license = "GPL-3.0-or-later"
#package-dir = {"" = "."}
#dependencies = ["numpy", "matplotlib"]
authors = [
	{ name="deftasparagusanaconda", email="deftasparagusanaconda@gmail.com" }
]

[project.scripts]
predict_genre = "predict_genre.main:main"

[project.urls]
Homepage = "https://github.com/deftasparagusanaconda/predict-genre"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
